--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "i18next": "^25.7.4",
     "i18next-browser-languagedetector": "^8.2.0",
     "i18next-http-backend": "^3.0.2",
+    "lucide-react": "^0.563.0",
     "next": "16.1.1",
     "next-themes": "^0.4.6",
     "react": "19.2.3",
