--- a/package.json
+++ b/package.json
@@ -14,13 +14,15 @@
     "i18next": "^25.7.4",
     "i18next-browser-languagedetector": "^8.2.0",
     "i18next-http-backend": "^3.0.2",
+    "jspdf": "^4.0.0",
     "lucide-react": "^0.563.0",
     "next": "16.1.1",
     "next-themes": "^0.4.6",
     "qrcode.react": "^4.2.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
-    "react-i18next": "^16.5.3"
+    "react-i18next": "^16.5.3",
+    "resend": "^6.9.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
